--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,21 +3,31 @@ html, body {
   padding: 0;
 
   .todo-app {
-    width: 40%;
+    width: 50%;
     height: 100%;
     margin: 20px auto;
+    padding: 20px;
+    border-radius: 0 50px 0 50px;
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
 
     .btn {
       width: 60px;
       padding: 5px 10px;
       background: #ffffff;
       border: 1px solid #545454;
+      cursor: pointer;
     }
 
     .d-flex {
       display: flex;
     }
 
+    input:focus {
+      border: 1px solid #545454;
+      outline: none;
+    }
     //  -------------------------
     //  create block
     //  -------------------------
@@ -27,13 +37,11 @@ html, body {
       background: #ffffff;
       border-radius: 10px 10px 0 0;
       padding: 20px 10px;
-      -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
-      -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
+
 
       input {
         width: 85%;
-        margin-right: auto;
+        padding: 0 5px;
       }
     }
     //  -------------------------
@@ -51,12 +59,13 @@ html, body {
         margin: 10px 0;
         padding: 10px;
         background: #ffffff;
-        -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
-        -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
-        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 1);
+        cursor: move;
 
-        &:last-child {
-          border-radius: 0 0 10px 10px;
+        &:hover {
+          border-radius: 0 5px 0 5px;
+          -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 1);
+          -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 1);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 1);
         }
 
         .title-task {
